--- a/Eğitim Öncesi Uygulamaları/3. Hafta/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/Eğitim Öncesi Uygulamaları/3. Hafta/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -15,13 +15,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "NGjvNwKx_Te7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "21 sayisi 7'ye tam bölünür.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 1.Problemin Çözümünü Buraya Yazınız"
+        "# 1.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "x = int(input(\"Bir sayi giriniz:\"))\n",
+        "if x%7 == 0:\n",
+        "    print(f\"{x} sayisi 7'ye tam bölünür.\")\n",
+        "else:\n",
+        "    print(f\"{x} sayisi 7'ye tam bölünmez.\")\n"
       ]
     },
     {
@@ -55,13 +69,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "MXTtCxI1_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Harf notunuz AA!\n"
+          ]
+        }
+      ],
       "source": [
-        "# 2.Problemin Çözümünü Buraya Yazınız"
+        "# 2.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "vize = float(input(\"Vize notunuzu giriniz:\"))\n",
+        "final = float(input(\"Final notunuzu giriniz:\"))\n",
+        "ort = vize*40/100+final*60/100\n",
+        "\n",
+        "if final<50:\n",
+        "    print(\"Harf notunuz FF!\")\n",
+        "else:\n",
+        "    if ort>=85:\n",
+        "        print(\"Harf notunuz AA!\")\n",
+        "    elif 85>ort>=75:\n",
+        "        print(\"Harf notunuz BA!\")\n",
+        "    elif 75>ort>=70:\n",
+        "        print(\"Harf notunuz BB!\")\n",
+        "    elif 70>ort>=65:\n",
+        "        print(\"Harf notunuz CB!\")\n",
+        "    elif 65>ort>=60:\n",
+        "        print(\"Harf notunuz CC!\")\n",
+        "    elif 60>ort>=55:\n",
+        "        print(\"Harf notunuz DC!\")\n",
+        "    elif 55>ort>=50:\n",
+        "        print(\"Harf notunuz DD!\")\n",
+        "    else:\n",
+        "        print(\"Harf notunuz FF!\")\n"
       ]
     },
     {
@@ -84,13 +130,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "bPjE8W0i_Te8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ferit'in yasi 20 ve daha büyüktür.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 3.Problemin Çözümünü Buraya Yazınız"
+        "# 3.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "birinciKisi = input(\"Merhaba YetGenli! İsmin nedir?\")\n",
+        "yas1 = int(input(\"YetGenli yaşini öğrenebilir miyim?\"))\n",
+        "ikinciKisi = input(\"Merhaba YetGenli! İsmin nedir?\")\n",
+        "yas2 = int(input(\"YetGenli yaşini öğrenebilir miyim?\"))\n",
+        "\n",
+        "if yas1>yas2:\n",
+        "    print(f\"{birinciKisi}'in yasi {yas1} ve daha büyüktür.\")\n",
+        "elif yas1<yas2:\n",
+        "    print(f\"{ikinciKisi}'in yasi {yas2} ve daha büyüktür.\")\n",
+        "else:\n",
+        "    print(\"YetGenliler {} ve {} yaşlariniz eşit!\".format(birinciKisi,ikinciKisi))\n"
       ]
     },
     {
@@ -118,7 +184,8 @@
       },
       "outputs": [],
       "source": [
-        "# 4.Problemin Çözümünü Buraya Yazınız"
+        "# 4.Problemin Çözümünü Buraya Yazınız\n",
+        "\n"
       ]
     },
     {
@@ -218,23 +285,31 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.10.5 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.10.5"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.1"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
         "hash": "5026d2d6e7aaaaba093def813beadff083d8733e4a511af01735cbabd156995d"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
