--- a/Eğitim Öncesi Uygulamaları/3. Hafta/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/Eğitim Öncesi Uygulamaları/3. Hafta/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -178,14 +178,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "TSAXs8et_Te9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ateşiniz 34.5 derece. AVM'ye girebilirsin! Maske takmayi unutma!\n"
+          ]
+        }
+      ],
       "source": [
         "# 4.Problemin Çözümünü Buraya Yazınız\n",
-        "\n"
+        "\n",
+        "ates = float(input(\"Ateşinizi giriniz:\"))\n",
+        "\n",
+        "if ates <= 37.5:\n",
+        "    print(\"Ateşiniz {} derece. AVM'ye girebilirsin! Maske takmayi unutma!\".format(ates))\n",
+        "else:\n",
+        "    print(\"Ateşiniz {} derece. AVM'ye giremezsin! Hemen evine dön!\".format(ates))\n",
+        "    "
       ]
     },
     {
@@ -217,13 +232,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "t-XPI_u0_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Beden Kitle Endeksin = 23.37472607742878, Normal\n"
+          ]
+        }
+      ],
       "source": [
-        "# 5.Problemin Çözümünü Buraya Yazınız"
+        "# 5.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "boy = float(input(\"Sevgili YetGen lideri, boyunu(cm) girer misin?\"))\n",
+        "kilo = float(input(\"Sevgili YetGen lideri, kilonu(kg) girer misin?\"))\n",
+        "\n",
+        "bKİ = kilo/((boy/100)**2)\n",
+        "\n",
+        "if bKİ<18.5:\n",
+        "    print(f\"Beden Kitle Endeksin = {bKİ}, Zayif\")\n",
+        "elif 18.5<=bKİ<25:\n",
+        "    print(f\"Beden Kitle Endeksin = {bKİ}, Normal\")\n",
+        "elif 25<=bKİ<30:\n",
+        "    print(f\"Beden Kitle Endeksin = {bKİ}, Fazla Kilolu\")\n",
+        "else:\n",
+        "    print(f\"Beden Kitle Endeksin = {bKİ}, Obez\")\n"
       ]
     },
     {
@@ -240,13 +277,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "Tu2mcgco_Te-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sayin Ferit, ehliyet alabilirsiniz.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 6.Problemin Çözümünü Buraya Yazınız"
+        "# 6.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "isim = input(\"İsminizi giriniz:\")\n",
+        "yaş = int(input(\"Yaşinizi giriniz:\"))\n",
+        "eğitim = input(\"Eğitim durumunuzu giriniz:\")\n",
+        "\n",
+        "if yaş>=18 and eğitim == \"lise\":\n",
+        "    print(f\"Sayin {isim}, ehliyet alabilirsiniz.\")\n",
+        "elif yaş>=18 and eğitim == \"üniversite\":\n",
+        "    print(f\"Sayin {isim}, ehliyet alabilirsiniz.\")\n",
+        "else:\n",
+        "    print(f\"Sayin {isim}, ehliyet alamazsiniz.\")\n"
       ]
     },
     {
@@ -274,13 +330,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "4uWh8qUL_Te_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2000 artik yildir.\n"
+          ]
+        }
+      ],
       "source": [
-        "# 7.Problemin Çözümünü Buraya Yazınız"
+        "# 7.Problemin Çözümünü Buraya Yazınız\n",
+        "\n",
+        "yil = int(input(\"Sorgulayacağiniz yili giriniz:\"))\n",
+        "\n",
+        "a = yil%100\n",
+        "\n",
+        "if a != 0 and a%4 == 0:\n",
+        "    print(f\"{yil} artik yildir.\")\n",
+        "elif yil%400 == 0:\n",
+        "    print(f\"{yil} artik yildir.\")\n",
+        "else:\n",
+        "    print(f\"{yil} artik yil değildir.\")\n",
+        "    "
       ]
     }
   ],
