--- a/Eğitim Sonrası Uygulamaları/8. Hafta/8. Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/Eğitim Sonrası Uygulamaları/8. Hafta/8. Hafta Eğitim Sonrası Görevleri.ipynb
@@ -28,11 +28,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veriler başariyla kaydedildi.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1.Problemin Çözümünü Buraya Yazınız"
+    "# 1.Problemin Çözümünü Buraya Yazınız\n",
+    " \n",
+    "def vkiHesaplama(boy, kilo):\n",
+    "    return round(boy / ((kilo/100)**2), 1)\n",
+    "\n",
+    "n = int(input(\"Kaç giriş yapacaksiniz?\"))\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    adSoyad = input(\"Adiniz Soyadiniz:\")\n",
+    "    yas = int(input(\"Yaşiniz:\"))\n",
+    "    boy = float(input(\"Boy (cm):\"))\n",
+    "    kilo = float(input(\"Kilo (kg):\"))\n",
+    "\n",
+    "    vki = vkiHesaplama(boy,kilo)\n",
+    "\n",
+    "    if vki < 18.5:\n",
+    "        sinif = \"Zayif\"\n",
+    "    elif vki < 25:\n",
+    "        sinif = \"Normal kilolu\"\n",
+    "    elif vki < 30:\n",
+    "        sinif = \"Fazla kilolu\"\n",
+    "    elif vki < 40:\n",
+    "        sinif = \"Obez\"\n",
+    "    else:\n",
+    "        sinif = \"İleri derecede obez (morbid obez)\"\n",
+    "\n",
+    "    kullaniciData = [adSoyad, yas, boy, kilo, vki, sinif]\n",
+    "    data.append(kullaniciData)\n",
+    "\n",
+    "with open(\"veriler.txt\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    file.write(\"Ad Soyad\\tYaş\\tBoy\\tKilo\\tVKİ\\tKategori\\n\")\n",
+    "    for x in data:\n",
+    "        file.write(\"\\t\".join([str(i) for i in x]) + \"\\n\")\n",
+    "\n",
+    "print(\"Veriler başariyla kaydedildi.\")\n"
    ]
   },
   {
@@ -62,11 +106,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YetBar'a Hoş Geldiniz!\n",
+      "Menüyü görüntülemek için '1'e, smoothie yapmak için '2'e basiniz. Çikmak için '0'a basiniz.\n",
+      "----------YETBARA HOŞGELDİNİZ---------\n",
+      "---------------MENU-------------------\n",
+      "ARMUT:2 TL\n",
+      "BÖĞÜRTLEN:5 TL\n",
+      "ÇİLEK:3 TL\n",
+      "ELMA:4 TL\n",
+      "KARPUZ:6 TL\n",
+      "KİVİ:2 TL\n",
+      "KİRAZ:4 TL\n",
+      "MUZ:4 TL\n",
+      "ÜZÜM:6 TL\n",
+      "----------YETBARA HOŞGELDİNİZ---------\n",
+      "---------------MENU-------------------\n",
+      "ARMUT:2 TL\n",
+      "BÖĞÜRTLEN:5 TL\n",
+      "ÇİLEK:3 TL\n",
+      "ELMA:4 TL\n",
+      "KARPUZ:6 TL\n",
+      "KİVİ:2 TL\n",
+      "KİRAZ:4 TL\n",
+      "MUZ:4 TL\n",
+      "ÜZÜM:6 TL\n",
+      "Lütfen satin almak istediğiniz ürünü giriniz. Çikiş yapmak için '0'i tuşlayiniz.\n",
+      "Yanliş bir giriş yaptiniz, ürün eklenemedi!\n",
+      "Yanliş bir giriş yaptiniz, ürün eklenemedi!\n",
+      "Yanliş bir giriş yaptiniz, ürün eklenemedi!\n",
+      "Yanliş bir giriş yaptiniz, ürün eklenemedi!\n",
+      "Fiş kaydediliyor.\n",
+      "\n",
+      "TEŞEKKÜRLER!\n",
+      "YİNE BEKLERİZ!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2.Problemin Çözümünü Buraya Yazınız"
+    "# 2.Problemin Çözümünü Buraya Yazınız\n",
+    "import time \n",
+    "\n",
+    "menu = {\n",
+    "    \"ARMUT\":2,\n",
+    "    \"BÖĞÜRTLEN\":5,\n",
+    "    \"ÇİLEK\":3,\n",
+    "    \"ELMA\":4,\n",
+    "    \"KARPUZ\":6,\n",
+    "    \"KİVİ\":2,\n",
+    "    \"KİRAZ\":4,\n",
+    "    \"MUZ\":4,\n",
+    "    \"ÜZÜM\":6,\n",
+    "}\n",
+    "\n",
+    "def display_menu():\n",
+    "    print(\"----------YETBARA HOŞGELDİNİZ---------\")\n",
+    "    print(\"---------------MENU-------------------\")\n",
+    "    \n",
+    "    for i in list(menu.keys()):\n",
+    "        print(f\"{i.upper()}:{menu[i]} TL\")\n",
+    "\n",
+    "def tekUrunFiyatHesaplama(urun, adet):\n",
+    "    assert adet >=0 , \"Ürün adedi 0 veya 0'dan küçük olmaz!\"\n",
+    "\n",
+    "    if urun not in list(menu.keys()):\n",
+    "        return None\n",
+    "    else:\n",
+    "        return menu[urun]*adet\n",
+    "    \n",
+    "def satinAlma():\n",
+    "    display_menu()\n",
+    "    print(\"Lütfen satin almak istediğiniz ürünü giriniz. Çikiş yapmak için '0'i tuşlayiniz.\")\n",
+    "\n",
+    "    satinAlinanUrunler = []\n",
+    "    satinAlmaAdedi = []\n",
+    "    sonFiyat = 0\n",
+    "\n",
+    "    while 1:\n",
+    "        eklenecekUrun = input(\"Hangi üründen eklemek istiyorsunuz?\")\n",
+    "        if eklenecekUrun == \"0\":\n",
+    "            print(\"Fiş kaydediliyor.\")\n",
+    "            break\n",
+    "\n",
+    "        eklemeAdedi = int(input(\"Kaç adet eklemek istiyorsunuz?\"))\n",
+    "        fiyat = tekUrunFiyatHesaplama(eklenecekUrun, eklemeAdedi)\n",
+    "\n",
+    "        if fiyat is None:\n",
+    "            print(\"Yanliş bir giriş yaptiniz, ürün eklenemedi!\")\n",
+    "        else:\n",
+    "            print(f\"Satin alma ücreti: {fiyat} TL.\\nSatin almayi onaylamak için 'y', iptal etmek için 'n' giriniz.\")\n",
+    "            check = input(\"Satin almayi onayliyor musunuz?\")\n",
+    "\n",
+    "            if check == \"y\":\n",
+    "                print(\"Satin alim onaylandi.\")\n",
+    "                print(\"-\"*40)\n",
+    "\n",
+    "                sonFiyat += fiyat\n",
+    "\n",
+    "                satinAlinanUrunler.append(eklenecekUrun)\n",
+    "                satinAlmaAdedi.append(eklemeAdedi)\n",
+    "\n",
+    "                print(f\"Ara Toplam: {sonFiyat} TL\")\n",
+    "            elif check == \"n\":\n",
+    "                print(\"Satin alma işlemi iptal edildi.\")\n",
+    "                print(\"-\"*40)\n",
+    "\n",
+    "    return sonFiyat, satinAlinanUrunler, satinAlmaAdedi\n",
+    "\n",
+    "def main():\n",
+    "    print(\"YetBar'a Hoş Geldiniz!\\nMenüyü görüntülemek için '1'e, smoothie yapmak için '2'e basiniz. Çikmak için '0'a basiniz.\")\n",
+    "\n",
+    "    program = None\n",
+    "\n",
+    "    while 1:\n",
+    "        program = int(input(\"Tercihiniz:\"))\n",
+    "\n",
+    "        if program < 0 or program > 2:\n",
+    "            print(\"Yanliş bir tercih yaptiniz. Lütfen tekrar deneyiniz.\")\n",
+    "        elif program == 0:\n",
+    "            print(\"Çikis yapiliyor...\\nSağlikli günler dileriz.\")\n",
+    "            break\n",
+    "        elif program == 1:\n",
+    "            display_menu()\n",
+    "        elif program == 2:\n",
+    "            satinAlmaUcreti, satinAlinanUrunler, satinAlmaAdedi = satinAlma()\n",
+    "\n",
+    "            with open(\"kasa.txt\",\"a\",encoding=\"utf-8\") as file:\n",
+    "                file.write(str(time.ctime(time.time())))\n",
+    "                file.write(\"\\n\")\n",
+    "                file.write(','.join(map(str,satinAlinanUrunler)))\n",
+    "                file.write(\"\\n\")\n",
+    "                file.write(','.join(map(str,satinAlmaAdedi)))\n",
+    "                file.write(\"\\n\")\n",
+    "                file.write(f\"Toplam: {satinAlmaUcreti}\")\n",
+    "                file.write(\"\\n\")\n",
+    "                file.write(\"*\"*20)\n",
+    "                file.write(\"\\n\")\n",
+    "            \n",
+    "            cikisKontrol = input(\"Başka bir işlem yapmak istiyor musunuz? (evet-hayir):\")\n",
+    "\n",
+    "            if cikisKontrol == \"evet\":\n",
+    "                pass\n",
+    "            else:\n",
+    "                print(\"\\nTEŞEKKÜRLER!\\nYİNE BEKLERİZ!\")\n",
+    "                break\n",
+    "main()"
    ]
   }
  ],
@@ -77,8 +267,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
